2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.[h|cxx] : set the Transfert Syntax values to the header
     file, to be accessed by other files (like gdcmFile). Remove commented
     code. Move the change of the header to the gdcmFile, using the 
     DocEntryArchive
   * src/gdcmHeader.[h|cxx] : the write is completely made in the Header.
     To be sure of that (and simplify calls), the Write of the header now
     gets a file name and not a file pointer (std::ifstream).
   * src/gdcmFile.[h|cxx] : apply the write file type to the header, using the
     DocEntryArchive. Remove all open of the written file

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.cxx : compilation bug fix for the vtk part

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx : fix bug... test if the fp is opened to use it
   * src/gdcmPixelConvert.cxx : calculate the image size when while the grab of
     the header.
   * src/gdcmFile.[h|cxx] : remove PixelRead and ImageDataSizeRaw variables and
     some corresponding methods. Write correctly the file and check before
     write
   * Test/TestCopyDicom.cxx, TestReadWriteReadCompare.cxx,
     TestAllReadCompareDicom.cxx : pass the write of images to RGB and test
     is now on RGB datas (as before my last commit
   * Example/PrintHeader.cxx, PrintFile.cxx : repad files.

2004-11-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmBinEntry.cxx, gdcmSeqEntry.cxx, gdcmSQItem.cxx, gdcmValEntry.cxx :
     Add a print information of the type of the entry
   * src/gdcmDocument.cxx : add the write of the preambule of a Dicom file.
     It was in the gdcmFile, and all write have been regrouped
   * src/gdcmFile.[h|cxx] : add methods to get the Raw data elements and size.
     Write correctly all dicom files (in decompressed mode only at this time)