@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmHeader.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/11/25 13:12:02 $
-  Version:   $Revision: 1.206 $
+  Date:      $Date: 2004/11/25 15:46:11 $
+  Version:   $Revision: 1.207 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -171,7 +171,7 @@ bool Header::Write(std::string fileName,FileType filetype)
           RemoveEntryNoDestroy(e);
       }
    }
-   Document::Write(fp,filetype);
+   Document::WriteContent(fp,filetype);
 
    fp->close();
    delete fp;
