@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmSeqEntry.h,v $
   Language:  C++
-  Date:      $Date: 2004/11/16 02:54:35 $
-  Version:   $Revision: 1.23 $
+  Date:      $Date: 2004/11/25 15:46:12 $
+  Version:   $Revision: 1.24 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -37,7 +37,7 @@ public:
    ~SeqEntry();
    
    void Print(std::ostream &os = std::cout); 
-   void Write(std::ofstream *fp, FileType filetype);
+   void WriteContent(std::ofstream *fp, FileType filetype);
 
    /// returns the SQITEM chained List for this SeQuence.
    ListSQItem const & GetSQItems() const { return Items; }
